GPC/tests/examples/fail/errArith2.gpc

int errArith2() {
    return 3 / 3.0;
}

